# speechall-python-sdk

./: .fernignore  .gitignore  .openapi-generator-ignore  CLAUDE.md  Makefile  README.md  SDK_GENERATION_PLAN.md  __init__.py  client.py  config.yml  environment.py  example_simple.py  example_transcribe.py  fix_dual_format_responses.py  fix_transcription_response.py  pyproject.toml  regenerate.sh  setup.py  simple_example.py
.beads/: beads.left.meta.json  issues.jsonl  metadata.json
.openapi-generator/: FILES
docs/: BaseTranscriptionConfiguration.md  CreateReplacementRuleset201Response.md  CreateReplacementRulesetRequest.md  ErrorResponse.md  ExactRule.md  OpenAIAudioResponseFormat.md  OpenAICompatibleSpeechToTextApi.md  OpenAICreateTranscriptionResponseJson.md  OpenAICreateTranscriptionResponseVerboseJson.md  OpenAICreateTranslationRequestModel.md  OpenAICreateTranslationResponseJson.md  OpenAICreateTranslationResponseVerboseJson.md  OpenAITranscriptionSegment.md  OpenAITranscriptionWord.md  OpenaiCompatibleCreateTranscription200Response.md  OpenaiCompatibleCreateTranslation200Response.md  RegexGroupRule.md  RegexRule.md  RemoteTranscriptionConfiguration.md  ReplacementRule.md  ReplacementRulesApi.md  SpeechToTextApi.md  SpeechToTextModel.md  TranscriptionDetailed.md  TranscriptionOnlyText.md  TranscriptionResponse.md  TranscriptionSegment.md  TranscriptionWord.md
errors/: __init__.py  gateway_timeout_error.py  payment_required_error.py  service_unavailable_error.py  too_many_requests_error.py
examples/: .gitignore  README.md  alternative_quick_fix.md  pyproject.toml  transcribe_local_file.py  transcribe_remote_file.py
fern/: fern.config.json  generators.yml
open_ai_compatible_speech_to_text/: __init__.py  client.py
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
replacement_rules/: __init__.py  client.py
scripts/: generate.sh
speech_to_text/: client.py
speechall/: api_client.py
speechall-python-sdk/: README.md  pyproject.toml
test/: test_base_transcription_configuration.py  test_create_replacement_ruleset201_response.py  test_create_replacement_ruleset_request.py  test_error_response.py  test_exact_rule.py  test_open_ai_audio_response_format.py  test_open_ai_compatible_speech_to_text_api.py  test_open_ai_create_transcription_response_json.py  test_open_ai_create_transcription_response_verbose_json.py  test_open_ai_create_translation_request_model.py  test_open_ai_create_translation_response_json.py  test_open_ai_create_translation_response_verbose_json.py  test_open_ai_transcription_segment.py  test_open_ai_transcription_word.py  test_openai_compatible_create_transcription200_response.py  test_openai_compatible_create_translation200_response.py  test_regex_group_rule.py  test_regex_rule.py  test_remote_transcription_configuration.py  test_replacement_rule.py  test_speech_to_text_api.py  (+11 more)
(+95 files in other folders)
