[project]
name = "speechall-python-sdk"
version = "1.0.0"
description = "Speechall API Python SDK"
authors = [
    { name = "Speechall Support", email = "team@openapitools.org" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["OpenAPI", "OpenAPI-Generator", "Speechall API"]

dependencies = [
    "urllib3>=1.25.3",
    "python-dateutil>=2.8.2",
    "pydantic>=1.10.5,<2",
    "aenum>=3.1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "tox>=3.9.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openapi_client"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
