[project]
name = "speechall-examples"
version = "0.1.0"
description = "Example scripts for using the Speechall Python SDK"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",  # For loading .env files
]

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.0",
]
